terminei o modulo 1 de  front

--- a/modulo html/aula1-5.html
+++ b/modulo html/aula1-5.html
@@ -9,13 +9,21 @@
 <body>
 
     <!--AULA 1 DE H1 A H6 -->
-        <!--AULA 2 PARAGRAFOS, NEGRITOS, sublinhados e span (span nao pula linha pq é uma tag inline) -->
+     <!--AULA 2 PARAGRAFOS, NEGRITOS, sublinhados e span (span nao pula linha pq é uma tag inline) -->
 
         <p>Olá mundo, <span>do Gabriel.</span></p>
 
-            <!--AULA 3 DE imagens -->
+    <!--AULA 3 DE imagens -->
 
-            <img src="film.jpg" alt="imagem link">
+        <img src="film.jpg" alt="imagem link">
+
+    <!--AULA 4 DE divisoes e sessoes -->
+
+    <!--AULA 5 de ancoras -->
+
+    
+
+
 
 
     
